# financial-agent

./: .env.exemple  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: agent.py  session.py  store.py
app/tools/: __init__.py  financial_tools.py  memory.py
scripts/: chat.py
